Fixed default font on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -10,9 +10,9 @@
 
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
-html,
 body,
 #__next {
   height: 100%;
@@ -20,6 +20,10 @@ body,
   margin: 0;
   padding: 0;
   font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Apple SD Gothic Neo',
+    'Malgun Gothic', '맑은 고딕', 나눔고딕, 'Nanum Gothic', 'Noto Sans KR', 'Noto Sans CJK KR',
+    arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 button:focus,
